--- a/examples/browser-webrtc/Cargo.toml
+++ b/examples/browser-webrtc/Cargo.toml
@@ -25,7 +25,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 axum = "0.7.5"
 libp2p = { path = "../../libp2p", features = [ "ed25519", "macros", "ping", "tokio"] }
-libp2p-webrtc = { workspace = true, features = ["tokio"] }
+libp2p-webrtc-str0m = { workspace = true, features = ["tokio"] }
 rust-embed = { version = "8.3.0", features = ["include-exclude", "interpolate-folder-path"] }
 tokio = { workspace = true, features = ["macros", "net", "rt", "signal"] }
 tokio-util = { version = "0.7", features = ["compat"] }
