--- a/transports/webrtc-str0m/Cargo.toml
+++ b/transports/webrtc-str0m/Cargo.toml
@@ -21,6 +21,7 @@ multihash = { workspace = true }
 tracing = { workspace = true }
 
 # external dependencies
+futures-timer = "3.0.3"
 if-watch = "3.2"
 rand = "0.8"
 send_wrapper = "0.6.0"
